--- a/source/_posts/2013-05-13-day-one.markdown
+++ b/source/_posts/2013-05-13-day-one.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "day_one"
+title: "Day 1: Melbourne to Saigon"
 date: 2013-05-13 22:52
 tags: airplanes, airports, travel, vietnam
 priority: 0.5
@@ -8,6 +8,8 @@ priority: 0.5
 I spent my entire last night in Melbourne with my mind racing, completely unable to sleep. I think I nearly feel asleep for a bit at around 5am, and then was woken not long after by a notification on my phone lighting up the room.
 
 By 6:30am when I planned to get up I'd completely given up hope of getting any sleep and got up and made myself a coffee, then zipped up my bag fully packed.
+
+<a href="http://www.flickr.com/photos/83213379@N00/11423926246/" title="photo 1 by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3791/11423926246_98bcd832c4_c.jpg" width="800" height="600" alt="Packed bags"></a>
 
 I decided at the last minute, that rather than throw out a bunch of socks and underwear that I didnt have room to bring, I'd take a throwaway back and my second piece of carry-on luggage filled with them, and then throw them out as I use them to ease into this having to do super regular washing.
 
@@ -21,9 +23,13 @@ I got put in the very middle seat on the plane between two women, which meant bo
 
 I took with me one of those neck pillow thingies, which I'm sure I'd used in the past and not found to be particularly great. I'd taken it because I figured it might be ok for one flight and I'd have no attachment getting rid of it as soon as needed. But it turned out the thing is amazing. Earlier in the year just on a flight to Wellington I'd gotten an incredibly sore neck trying to sleep on that short flight, but on the ~8 hours to Singapore I managed to sleep and sit lazily for the whole flight with my neck feeling great. So the pillow may not get turfed quite so early.
 
+<a href="http://www.flickr.com/photos/83213379@N00/11425205114/" title="photo 2 by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2875/11425205114_aa105b3d09_c.jpg" width="600" height="800" alt="Neck pillow"></a>
+
 The stopover in Singapore was brief, only about 1 hour, so I didnt really get to look around, but they had free wifi so I checked the internets and filled in time. For a massive airport like that, the place felt like their aircon was hardly working. I re ckon it must have been nearly 30ºC inside.
 
 The flight to Ho Chi Minh City was uneventful, although arriving was a bit of a debacle. I (and what seemed like every other non-Vietnamese person in the airport) had organised a pre-approved visa on arrival. I lined up for 10 minutes to submit the lettter & paperwork and sat and waited. and waited. and waited. After about 40 minutes, there were no seats left and new-commers started lining up at the collection window as though that was going to get theirs processed faster.
+
+<a href="http://www.flickr.com/photos/83213379@N00/11424065713/" title="photo 3 by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3764/11424065713_96436ea67e_c.jpg" width="800" height="600" alt="People waiting for visas"></a>
 
 After just over an hour they finally called my name and gave me my passport back, with which I could go through iigration and finally collect my bag, which had long since been pulled off the baggage collection belt and was sitting unattended with loads of other peoples stuff. It'd be a prime oportunity for someone dodgy to go through any bag they liked, but then I guess the only way to get to that part of the airport without being an official would be to take an international flight, so I guess that's a reasonable bar to stop it from happening often.
 
