--- a/source/_posts/2013-05-17-HCMC.markdown
+++ b/source/_posts/2013-05-17-HCMC.markdown
@@ -10,65 +10,16 @@ On my first morning in Vietnam I woke, packed my stuff in my private room into m
 
 I went out onto the main road to try some delicious baked goods from the bakery recommended to me by the first hostel. They had some pretty tasty stuff, but the place was a big franchise and felt very much like Breadtop back home. I sat outside eating my coffee bun and croissant and a little older Vietnamese lady who was there eating started to talk to me. She asked me where I was from, how long I had been travelling, etc. Then she offered me a massage. I could already see where this was going and told her no, but just in case I had missed her meaning she repeated she would give me massage and "boom boom". At 10am. At a franchise bakery. It seems that being a single male in Vietnam leads to the locals assuming you're a sex tourist.
 
+<a href="http://www.flickr.com/photos/83213379@N00/9686528133/" title="ABC Bakery by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7281/9686528133_32719c2319_c.jpg" width="800" height="601" alt="ABC Bakery"></a>
+
 I set out to explore the city on foot, finding that as a westerner you're expected to never want to walk anywhere. I was continuously hassled by motorbike taxis, who couldn't seem to accept my answer that I just wanted to walk around and get a feel for the place, constantly rebutting with "Where do you want to go?". I didn't want to go anywhere, I just wanted to look around without being accosted damn it.
 
 I ended up at the Ho Chi Minh Museum, an old and massive palace with an underground bunker, filled with bits and pieces of Vietnam's history. Sadly the English translations left a lot to be desired so I didn't get all that much out of it, but it was a cool building.
+
+<a href="http://www.flickr.com/photos/83213379@N00/9689649648/" title="Underground bunker door under Ho Chi Minh Museum by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2829/9689649648_3e54286c72_c.jpg" width="601" height="800" alt="Underground bunker door under Ho Chi Minh Museum"></a>
 
 I started to get too hot so I went looking for somewhere air conditioned to chill for a bit and found a fancy shopping centre. The place looked expensive, which gave me hope that I'd be able to break on of these stupid 500K Dong notes that the ATM gave me, that pretty much nobody ever has enough change for. I ended up getting lunch there, some fresh spring rolls, pork, eggs and "broken" rice, but the rice seems pretty normal to me. Then I bought a nice ice cream, sesame and tapioca, and sat int eh cool typing up a blog post.
 
 I headed back to the hostel and checked in properly, took my stuff up to my room and then headed out in search of a massage. I ended up finding the place that the first hostel had recommended, which turned out to be run by the HCMC blind society. It was an odd experience being given a massage by a blind man who didn't speak a word of English, not being able to tell him "harder please" or "focus on that right shoulder", but it want bad and it was super cheap.
 
 I decided that I had gone two long without practicing poi, so I grabbed a set and went and found a spot over in the park across the road near my hostel. After about 5 minutes I had gathered a small crowd of onlookers and children watching me, and after 10 minutes I was dripping with sweat and needed a rest. Two teenagers from the rcowd approached me and wanted to know if I would talk with them for a while so they could practice their English. I agreed and ended up sitting with them for about an hour, talking and answering questions.
-
-## Day 2
-
-On day 2 I headed to the Cu Chi tunnels on a tour booked through my hostel. Our guide was a very interesting half-Filipino, half Vietnamese man who fought in the war on the USA side. It sounded like he'd had a pretty horrific life, with both his wife and mother killed in the war, and his siblings fleeing the country. It was nice to have someone who was actually involved and from Vietnam tell us that most of what the Vietnamese museums state as truth is horribly biased propaganda, but that the USA is just as full of shit with their telling of events. Both sides did messed up things and there was no real winner.
-
-When we arrived at the tunnels we sat and watched a video that was so nationalistic/anti-American it was painful to watch; how the evil Americans were out to prevent Vietnam re-unifying (completely ignoring that, as I understand it, the south wasn't actually supportive of that, hence why the war didn't end when America and Co pulled out), and how this guy, that guy and another guy was awarded the killing Americans bravery awards for killing Americans, killing American this, killing Americans that. At one point I'm sure that every sentence spoken for a few minutes had "killing Americans" in it at least twice.
-
-The after the propaganda film we moved onto the actual site, were shown huge B-52 bomb craters which were all over the place. We were shown one of the "manhole" entrances to the tunnels. People were allowed to hop in for a photo but the hole looked crazy small and I didnt think my shoulders would fit through so I didn't give it a go. Next we saw a variety of different booby traps they used with the intention of perforating the Viet Cong's enemy soldiers and dogs; they were pretty vicious looking contraptions.
-
-We saw some ammunition making and hospital trenches/holes, then arrived at the shooting range. Having a shooting range on site means there's always the sound of gunfire in the trees, maybe giving the place an atmosphere somewhat like it would have been back in the war. I paid to fire 10 shots with an AK-47 at a whopping $1.60 per bullet. For a rifle that's claimed to be so reliable you can submerge it in water and it will still shoot, the one I had seemed to keep fucking up and not actually firing so we'd take the unfired bullet and put it back in the clip. Having seen the [youtube video by that guy fpsrussia where he slathers one in bacon and then slops soft serve all over it and it still fires](http://www.youtube.com/watch?v=4Ovyeoyl29I&list=PL9ED6B6AA7A8C2CDC&index=2), I can only assume the one I shot was incredibly old (maybe genuinely from the war?) and was due for retirement.
-
-After the shooting range we went down into the enlarged tourist tunnels, and to be honest they were bigger than I expected. I thought we'd be forced to crawl on our hands and knees the whole way but we could walk bent over flat at the waist pretty OK. There was only one tight spot that required hands and knees. I guess in the real ones someone my size would have gone hands and knees all the time, and gotten stuck at the choke points.
-
-Interesting fact we were told about the tunnels is that the Americans would apparently pump a bunch of gasoline into them and chuck in a match to try and flush out the Viet Cong, who would happily escape out to the river, but because the soil was all clay, the fire from the gasoline would effectively kiln the tunnel walls making them harder and the tunnels stronger.
-
-The bus ride home was pretty uninteresting. About half-way back it started bucketing down with rain; it as nuts to see the motorbike's continue to zoom past the bus in water that must have been 15-20cm deep in places. The drains did not look to be coping at all.
-
-Once we got back to HCMC I had a quick shower then headed down the lane and found a bar with tiny plastic chairs (the Vietnamese symbol for great stuff at cheap prices) and had a few beer hois at a price of 7000 VND, or about  $0.30 AUD. I also bought some tiny little boiled eggs with some dipping sauce from a lady running a stall just next to the bar, which were very tasty but no idea what bird they were from (or even if they were from a bird for that matter.).
-
-I lazily had dinner at some place that claimed they were recommended on trip advisor on their sign. I had a duck curry which was ok, but the place only had westerners eating there so either the food was bad or overpriced. I notice more and more how much American tastes and expectations differ from other western countries and wish that there was a way to filter out their reviews on such sites. Seeing a place in Vietnam get a high rating on trip advisor and then seeing the review say something like "the cheeseburgers here are amazing, the burritos are good too!" just makes me wonder why these people left home in the first place.
-
-I looked up a good massage place and started walking over towards it when my attention was stolen by the smell of waffles. I traced it to a little old lady on the side of the road making these little pillows of waffle-like/pancake-ish deliciousness. I continued on my quest and eventually found the massage place. It was fairly pricey in comparison to the ones on the main strip, but the Swedish therapy massage I got was totally worth it. It was just like the fancy hotel massages you always see in movies.
-
-
-## Day 3
-
-On the third day I finally took first motorbike taxi, which was a fun, cheap and fast way of getting the War Remnants Museum (Previously knows as the American War Crimes museum), plus the breeze from zooming around is nice and cooling. Why was I walking everywhere like a schmuck!? And yes Mum, I wore a helmet, although they're all so small in Vietnam I half think it might actually make things worse if there was actually an accident, concentrating the force in a ring around the top of my head.
-
-The war museum was interesting, but not catered to someone who knows next to nothing about the history of the war. There was lots of stuff about the specifics that happened, but very little about the motives of either side. There was a load of stuff about the after effects of agent orange on people of both sides of the war, but I needed to look up it up online to find it was a herbicide being sprayed to kill off all the vegetation so the Viet Cong couldnt hide among it.
-
-Not long after I arrived, so did a huge group of screaming primary school aged children. Just as annoying in any language. The children kept walking up to me and saying hello and then running off giggling, which felt a bit like being famous but got annoying very quickly. As a contrast, Later a group of boys that looked like they might be going to a military high school or something came through and they were silent and respectful. It must be a big job transforming the out of control kids into such upstanding citizens.
-
-Next I went to the reunification palace, where the president of the south used to live. It's a pretty kitch old place with an underground bunker under it that's full of neat old communications equipment.
-
-I got a cyclo from there to the Notre Dame cathedral, which was fun for a bit, but then it got pretty hot being in the sun and not moving fast enough to get a breeze. The old guy pedalling was pretty stubborn that he'd take me to the next place I went to and I ended up having to slip the money into his shirt pocket and walking off to find a motorbike driver.
-
-I went from there to the Bitexco building, the tallest building in HCMC with an observation deck near the top. It gave a great view of the city, the most intersting part being a patch of land right near the city that was almost all flattened and growing vegetation, while the photos of the area showed houses that used to be there. I asked about it and apparently it's the site of the new business district that they're expecting to be completed in 15 years. It would be pretty eye opening to come back when it's done and see that area that's currently mostly grass and debrie, being a bustling mess of skyscrapers.
-
-I went back to the hostel to rest for a bit, and than at 3 I went and met up with a nice HCMC local, Trinh, that I met through OK Cupid. She took me for a ride on her motorbike, went to a park where we sat and had iced Vietnamese coffee and talked for a while, answering a lot of the questions I'd wondered about things in Vietnam. Then went to a pho bo bar, and had some pho, this time with more instruction as to how to eat it. It was much better this time around, but I still think I'm a bigger fan of non-soup Vietnamese dishes.
-
-I chilled out at the hostel for a bit and the rain started bucketing down again, stranding me there for most of the evening. I sat in the common area and drank beers with an American dude who'd just come from Cambodia and I got some tips from him where to stay in Phnom Penh. Eventually the rain eased up so I quickly ducked out and got some pork buns and some other buns that I thought the woman said were beef, but instead has a yummy sweet paste in them.
-
-# Day 4
-
-For my final morning in Saigon I got up and ventured out north in search of something different for breakfast than the noodles and mystery meat I'd been having. I stopped along the way a few times to sit in tiny plastic chairs with the locals and drink iced coffee while the traffic did it's crazy thing. I ended up buying a half kilo of mangostein for breakfast with which I made a huge mess before the owner of one of the coffee stand I was sitting at came over with a knife and helped me out. Ugly fruit, but so very tasty.
-
-I sat in the shade at the park for a bit and had another woman solicit me for a massage and "boom boom". Being a single guy in Asia gets all sorts of unwanted attention. Sex tourists have made it a lot less pleasant for the rest of us.
-
-Later while sitting in the same spot I had a guy come and tell me my thongs needed cleaning. I told him no, please don't. I dont want you to clean my shoes but he was very insistent and got down with his brush near my feet. I pulled my foot away and accidentally kneed him in the head, after which I got up and quickly crossed the street and rushed away down the alley way my hostel is in.
-
-To recover from such an incident, I stumbled into one of the legit spa/massage places and decided that I'd get my nails done, since they were pretty gross from trying to get into the mangostein and I'd never had a manicure done before. It cost a whole $2.50, which I assume is cheap for a manicure and pedicure. The ladies working there were greatly amused when I asked for it. My nails are now nicely clipped and cuticles and stuff removed, but there are 2-3 spots where they clipped too closely that have bled a little. Not sure if I should be worried about that or not :S
-
-After that it was time to grab my bags head to the airport.
