--- a/source/_posts/2013-05-30-phu-quoc.markdown
+++ b/source/_posts/2013-05-30-phu-quoc.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Phu Qouc Island, Vietnam"
 date: 2013-05-30 22:24
-tags: vietnam, motorbikes
+tags: Vietnam motorbikes
 
 priority: 0.5
 ---
