--- a/source/_posts/2013-05-13-day-one.markdown
+++ b/source/_posts/2013-05-13-day-one.markdown
@@ -13,6 +13,8 @@ By 6:30am when I planned to get up I'd completely given up hope of getting any s
 
 I decided at the last minute, that rather than throw out a bunch of socks and underwear that I didnt have room to bring, I'd take a throwaway back and my second piece of carry-on luggage filled with them, and then throw them out as I use them to ease into this having to do super regular washing.
 
+<!-- more -->
+
 James generously offered to come and pick me up and drive me to the airport and even parked so he could come in to see me off through customs. What a champ!
 
 In the midst of all the excitement I completely forgot about applying for the Tourist tax refund thingy until I was already through customs and had already checked in most of the stuff I was going to claim back. It was only going to be $50, but I'm still disappointed that I didnt think to go and get the reciept stamped while I had possession of the stuff so I could have got the money.
