--- a/source/_posts/2013-05-17-HCMC.markdown
+++ b/source/_posts/2013-05-17-HCMC.markdown
@@ -10,6 +10,8 @@ On my first morning in Vietnam I woke, packed my stuff in my private room into m
 
 I went out onto the main road to try some delicious baked goods from the bakery recommended to me by the first hostel. They had some pretty tasty stuff, but the place was a big franchise and felt very much like Breadtop back home. I sat outside eating my coffee bun and croissant and a little older Vietnamese lady who was there eating started to talk to me. She asked me where I was from, how long I had been travelling, etc. Then she offered me a massage. I could already see where this was going and told her no, but just in case I had missed her meaning she repeated she would give me massage and "boom boom". At 10am. At a franchise bakery. It seems that being a single male in Vietnam leads to the locals assuming you're a sex tourist.
 
+<!-- more -->
+
 <a href="http://www.flickr.com/photos/83213379@N00/9686528133/" title="ABC Bakery by Lucas the nomad, on Flickr"><img alt="ABC Bakery" height="601" src="http://farm8.staticflickr.com/7281/9686528133_32719c2319_c.jpg" width="800" /></a>
 
 I set out to explore the city on foot, finding that as a westerner you're expected to never want to walk anywhere. I was continuously hassled by motorbike taxis, who couldn't seem to accept my answer that I just wanted to walk around and get a feel for the place, constantly rebutting with "Where do you want to go?". I didn't want to go anywhere, I just wanted to look around without being accosted damn it.
