--- a/source/_posts/2013-05-30-phu-quoc.markdown
+++ b/source/_posts/2013-05-30-phu-quoc.markdown
@@ -10,6 +10,8 @@ Upon arriving at Duong Dong Airport in Phu Quoc I got a taxi to my hotel, the A7
 
 I did some washing in the bathroom sink and nearly accidentally tore it off the wall. it turns out it was held up by the plumbing and two flimsy little brackets, which I bent a bit (and then bent back as well as I could).
 
+<!-- more -->
+
 I went for a walk towards the main part of town and stumbled across the night markets, where all kinds of fresh seafood was available to be purchases and BBQ'd up for you there on the spot, along with some fruit stalls and souvenir stalls. I found a place that made avocado smoothies, one of the amazing discoveries from last time I was in Vietnam and was happy to find it was just as tasty as I remembered.
 
 I bought some squid that was fresh enough that you could poke it and it's skin pulsed through different colours and a garlic sea snail. The squid was divine but I'm not so sure about the texture of the sea snail. The enthusiastic and friendly guy who talked me into buying from him told me he's a guide during the day and offered to take me around the island on his motorbike tomorrow. He seemed like a good guy so I agreed.
