--- a/source/_posts/2013-07-01-thailand.markdown
+++ b/source/_posts/2013-07-01-thailand.markdown
@@ -13,6 +13,8 @@ After having a few taxi's try and ask for ludicrous amounts for the trip to the 
 
 Riding on the bag of a motorbike with a reasonably heavy pack making you back-heavy isn't all that fun, I spent the ride holding on like my life depended on it because it, no helmets for passengers in Thailand :/
 
+<!-- more -->
+
 Some ominous dark clouds overhead started to dump down half way to Lamai so we stopped under the awning of a 7-11 for half an hour until it eased up (but didn't stop) and then rode on. As the sun was setting we went past a nice beach which I would later find out was Lamai, where I would end up staying, but first we needed to ride for another half hour off to the middle of nowhere to a place that had a similar but different name. Along the way the driver would stop and ask people on the side of the road direction, I'd show them the map on my phone indicated we'd passed it already and they'd tell the motorbike driver that it was still further on.
 
 We finally got to the place that and I asked to lady at reception to please explain to the driver this was the wrong place, which she was amazingly helpful in doing so. So back on the bike in the rain for half an hour back in the other direction and I finally got to the first place I was planning on looking at. It was already 8:30pm so I didn't bother looking elsewhere. I paid the motorbike driver and he asked me for more "for the extra driving". I told him no way in hell, he'd already charged me 50% more and wasted most of my night taking me to the wrong place and ignoring me telling him we'd gone past it.
