--- a/source/_posts/2013-08-13-india-part-1.markdown
+++ b/source/_posts/2013-08-13-india-part-1.markdown
@@ -15,6 +15,8 @@ I woke the next day and went out in search of an ATM so I could get some Rupees 
 
 Breakfast wasn't so easy to find. The area the hotel was in, Karol Barg, seemed to be mostly closed, which seemed a bit silly in a country where it gets so hot to be shut for the coolest part of the day.
 
+<!-- more -->
+
 A very persistent "guide" and his auto-rickshaw driver finally wore me down after following me for about 15 minutes while I walked and failed to find anywhere open with food. They took me to a south Indian street food place where I had dosa and vegetable curry, which was actually really good, so I decided to stick with them for a while and have them show me around Delhi. That turned out to be a bit of a mistake, the next place they took me to a "handi-craft" market.
 
 Maybe it's just me, but on day one of visiting a country, before I've seen anything at all of the place, I have no interest in buying kitche souvenirs. Heck, on day 20 after having seen a bunch of the country I still don't have the slightest inclination to buy souvenirs, and even less so to buy stuff so generic that you could think it was from anywhere in Asia.
