--- a/source/_posts/2013-08-19-india-part-2.markdown
+++ b/source/_posts/2013-08-19-india-part-2.markdown
@@ -11,6 +11,8 @@ The overnight train the second time around, from Varanasi to near Agra, was a bi
 
 We soon noticed what appeared to be rats lurking in the shadows underneath benches, occasionally making dashes in and out of the toilets. The toilets were a sight to not be seen. Wreaking of shit, the guys toilets consisted of three squats one of which had leaking plumbing that sprayed water at you as you first walked in the door, or went near the basin to wash your hands. How lovely!
 
+<!-- more -->
+
 The station we were at is quite a busy interchange station, so pretty much every 5 seconds there was an announcement, each preceded by Microsoft's tada.wav sound. Not annoying in the slightest. I started watching my watch to measure the silence and got excited where there was no announcement for an entire minute! As 00:30 approached we got word there were further delays, and a later ETA, which when it came to be that time the train didn't show and we didn't get any new information. The guys who make sure that people in the waiting area are actually allowed there went home and suddenly the room was full of homeless people sleeping on the floor, even under the benches we were sitting on.
 
 Finally at 03:30 our train arrived and we boarded, only 5.5 hours later than planned, and only a few hours before we were supposed to be arriving in Agra, which obviously wasn't going to happen. Completely exhausted and out of patience from staying up so late, you can imagine how overjoyed we were to find a guy sleeping in one of our assigned beds, and used blankets and pillows in most of the remaining ones. A conductor kicked the guy out and sorted us out with new bedding and so we could finally get to sleep.
