--- a/source/_posts/2013-08-26-india-part-3.markdown
+++ b/source/_posts/2013-08-26-india-part-3.markdown
@@ -12,6 +12,8 @@ The next morning half the tour group boarded a train heading to Delhi to finish 
 
 We got taken on another village tour, which was quite similar to Tordi Garh, but there was a tiny bit more evidence of western influence and capitalism here, in the form of a few more general store type shops and one place selling tourist trinkets. The kids, however, were just as beautiful and innocent, wanting little more than to see themselves on the screen of our cameras.
 
+<!-- more -->
+
 We also visited a temple that was decorated with carvings from before the time when Muslims had stated to influence India, with lots of carved women wearing nothing more than a sarong around their waist. It's actually a bit sad to think about the impact Muslimism has had on India today. People are shocked and offended if a woman wears a singlet exposing their shoulders. The country responsible for the inception of the karmasutra is today inhabited by a generation of men who act like primary school boys, titillated by asking if you've had "the sex" with your past girlfriends and wanting to high five you. Quite frankly it's depressing to see a country that was once so far ahead of the curve in sexual liberation, today being completely sexually retarded and ridiculously conservative, in the name of religion. It even seems from news events in the past little while that apparently rape is to be expected if you don't dress "appropriately"; apparently the lack of exposure to women's shoulders and lower thighs makes you less able to tell that a women showing some innocent skin isn't asking you to have sex with them. Who would have known!?! End rant.
 
 That evening we drove out to a hill with a lovely view of the sunset, where we had some chai. After the sun set we briefly went to a nearby lake and watched animals before it started to rain quite heavily and we headed back to our jeep and did the sides up before heading back to the hotel for a good nights sleep.
