--- a/source/_posts/2013-09-03-india-part-4.markdown
+++ b/source/_posts/2013-09-03-india-part-4.markdown
@@ -13,6 +13,8 @@ I took a very round about walk back into town and stumbled across quite a long s
 
 I organised a taxi up to see the monsoon palace for sunset, right up on top of the hill overlooking Udaipur. The views of the city were fantastic, but the gloomy overcast afternoon made the sunset into a non-event.
 
+<!-- more -->
+
 The next day I went back to see the zoo on a day that it is open, and instantly regretted coming. The few animals they had were in painfully small cages, which wreaked of shit; atrocious conditions that made me feel very sorry for the animals.
 
 That afternoon/evening I got my flight to Mumbai on Air India. I've already ranted about how horribly over-the-top bureaucratic the whole thing was (here)[], but one thing of note that I didn't look into until after I landed safety was Air India's safety record. I found (this article)[] claiming they are the 3rd least safe airline in the world, ignoring the ones so unsafe they don't count. Who needs bungee jumping when you've got dangerous airlines to travel with.
