--- a/source/_posts/2013-10-07-kenya.markdown
+++ b/source/_posts/2013-10-07-kenya.markdown
@@ -16,6 +16,8 @@ To make better use of the time we set up the kitchen to make lunch there at the 
 
 After a while Steve filled us in on things, apparently the registration was changed over a long time ago and the truck had been in and out of Kenya a bunch of times since then, but in the book they had always written down the old registration details, but because the border officials are so damn ethical they couldn't do that again for us this time.
 
+<!-- more -->
+
 There were three options that Steve thought might get us out of our pickle:
 
 1. We leave the truck and sort out other transport to Nairobi, and then hope the Carnet gets sorted out while we're in the Masai Mara (using smaller safari Land Cruisers again).
