--- a/source/_posts/2013-11-02-uganda.markdown
+++ b/source/_posts/2013-11-02-uganda.markdown
@@ -16,6 +16,8 @@ All up there was seven people from our Dragoman group who went along, who with o
 <em>Our rafting group</em></p>
 The first rapid of the day was one of the most fun and memorable ones, it was basically a three metre waterfall drop off, followed closely by two more pools of rapids. We went down the waterfall, which felt like a theme park flume log ride on steroids, then paddled as hard as we could for the bigger pool of rapids but the current was too strong and we ended up going down the less turbulent path.
 
+<!-- more -->
+
 <p class="centered"><a href="http://www.flickr.com/photos/83213379@N00/10421394005/" title="IMG_9312.jpg by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5507/10421394005_3e123c7a49_c.jpg" width="800" height="534" alt="Weeeeeeeee!"></a><br/>
 <em>Weeeeeeeee!</em></p>
 White water rapids are rated on a grading scale from one to five, with five being the biggest rapids, and we were told that all of the rapids we were going through that day would be between grade three to five. Perfect for someone like me who's never done it before :) It's not actually as scary as it sounds, because the White Nile river flow is very high volume, that means the rapids are really big, but they're also really deep so there's much less chance of coming into contact with rocks. Lots more exciting and safer to boot!
