a few more tags

--- a/source/_posts/2013-06-30-thailand.markdown
+++ b/source/_posts/2013-06-30-thailand.markdown
@@ -6,7 +6,7 @@ old_blog_url: http://www.lucasthenomad.com/post/54267962277/thailand
 author: 
 categories: 
 description: 
-tags: thailand, koh-tao, diving, boats, airports
+tags: thailand, koh-tao, diving, boats, airports, motorbikes
 priority: 0.5
 ---
 
