--- a/source/_posts/2014-02-15-england.markdown
+++ b/source/_posts/2014-02-15-england.markdown
@@ -9,4 +9,302 @@ dont_cache_images: true
 priority: 0.5
 ---
 Intro
+
+
+Flew into manchester, then got the train to nottingham where I met matt at one
+of the local brewpubs, The Vat and Fiddle, a castle rock pub. welcomed with a
+few pints there, then another few at Brewdog
+
+full english breakfast, then headed to nottingham castle for the robin hood beer
+festival. 1100 casks of ale, 900 tapped at any one time, others "settling". 300
+ciders. two tokens for a 1/3rd of a pint "taster", but you can get a sample of
+any of the beers the volume of what you'd get for a token at an aussie beer
+festival for free before you commit to any one beer to make sure you like it.
+
 <!-- more -->
+
+the people working serving the beers seemed pretty knowlegable and wanted to
+make sure you got beers you were happy with. mostly unaffiliated with any
+breweries, just beer lovers volunteering.
+
+amazing variety of beers and food available. I at a zebra burger from a place
+with all sorts of wild game meat (wild boar, kangaroo, etc), more variety than
+at *that place in kenya*. england's repuation for boring food is well out of
+date these days. 
+
+Amanda and Luke met up with us at the festival not long after lunch, great to
+see them again.
+
+I worked it out and I think I only drank about 6 pints over the whole day there,
+but I got to try dozens of different ales. My favourite beer was bateman's
+hazelnut brownie, a very rich syrupy beer, delicious aroma; the name is pretty
+much spot on. Not exactly a session beer, but delicious.
+
+stopped in at 'ye old trip to jerusalem", one of the claims to "the oldest pub in the UK", serving beer since 1189AD. it's partly carved out of a sandstone cave, very cool to think that people have been drinking there for nearly 1000 years.
+
+last stop for the night was at the canalhouse, a little pub on the canals that
+actually has a section of the shipping canals that actually runs inside the pub,
+presumably for unloading casks of ale back in the days (any maybe still today?).
+There we had a few very "big" craft beers, which probably didn't help with the way we woke up feeling the next morning. In case you cant guess, it wasnt fantastic.
+
+Once we were up and going the next day, we made a visit to the op shops in the
+rich part of town, where I managed to score a fine winter jacket for 8 pounds
+and a dapper hat for 6.50. Not travelling with winter clothes worked out pretty
+much perfectly for me this time; and hopefully will again if I end up somewhere
+cold again in the future.
+
+We did some scenic driving and had a nice long lunch at the unicorn hotel, a
+very traditional style countryside pub, where the pedigree ale pie was fantastic.
+
+
+On saturday we went back to the beer festival for it's biggest day. We didn't
+have pre-bought tickets so we got there before the gates opened to try and
+ensure we'd get in, only to find a line of people winding way down the hill and
+around the corner, all the while with england giving us some of it's typically
+wonderful weather. ie. it pissed down rain.
+
+Once the gates opened the line actually moved quite quickly (although it
+continued to grow about as fast as it moved), but we all got in without much
+hassle.
+
+we went straight to the table area and secured outselves a table and then I got
+some chicken tikka masala for breakfast. No drinking without a bit of "balast"
+as Matty P liked to put it.
+
+This day we focused mostly on the top tent where our table was, which conviently
+had the most different beers available. there was a bottom tent, and then a few
+other "renegade" tents with only one or two breweries beers available in them
+two, that I neglected to mention in my earlier descriptions.
+
+Luke and Amanda headed off to explore the south of England, but I'd decided I
+want to stop moving for a while and stayed put in nottingham for quite a long time.
+
+Life for me mostly consisted of sleeping in, reading/practicing spanish or
+spinning poi, then when Matty got home from his epicly long days at work we'd go
+out and visit any one of the many local pubs, trying as many different ales as
+humanly possible.
+
+It felt like a mutually benificial situation, Matty got a drinking buddy, and I
+got days to just chill and do nothing without feeling like I was wasting my
+limited time in city X for a while. 
+
+
+After a few weeks of this it was time to head to london for Amanda and Luke's
+leaving Europe celebrations. Matty and I got the bus in to Victoria Station,
+then headed straight to Camden to have a Lunch at a nice pub Matt knew, where
+thye served soemthing called a "Cheese and bacon dirty burger". how can you go
+wrong with a name like that?
+
+We then headed to a pub called the old haberdashery, where we were meeting
+Amanda &  Luke, Leigh and Nikki, and a few other random people we know who
+happen to be in london and had the afternoon free.
+
+After a lot of beers and reminicing, we headed to the boom festival teaser
+party, the main event for the evening, which sadly was a poorly organised
+disaster. We spent two hours waiting in line to get in (that was all with
+pre-booked tickets, the event was sold out), a cloak room line that didn't move
+in the 15 minutes I stood there before decided I wouldnt bother (I'd guess
+another 2 hours to cloak a jacket, and another 3 to get it back at the end of
+the night), A stupid token system at the bar which mean you had to queue up
+twice when you wanted a drink, or buy loads of tokens and risk having a bunch of
+unused tokens at the end of the night, and just plain way too many people packed
+into a tiny venue making the place stupidly hot that we went outside to the
+smoking area just to get out of the heat, and I was so hot that I was happy
+outside in London at the end of Autumn in just a T-shirt for a good half hour
+before I stopped feeling overheated.
+
+I'd love to say even in the face of all that I had a good time, but I didn't.
+pretty much everything about the night sucked, and I was getting so mad about
+how terribly planned everything was that I got a yelling at from Nicki about how
+negative I was being. I completely understand not wanting to make a bad
+situation feel worse, but when everything was done and dusted the next week I
+don't think anyone had a positive word to say about the event. I don't know how
+boom Festival could let such a shambles tarnish their brand like that.
+
+We left before the event finished, as soon as the trains to cambridge were running again, and like sleepless zombies endured something like 3 changes back and forth onto buses because of weekend track works. Thank you amanda for staying awake and making sure we got there in the end!
+
+In cambridge we were staying at Amanda's good friend Andrew's place, where we
+walked in, he handed us bacon sandwiches and then we all lay down and got some
+well needed rest. Andrew was heading off to visit his family, so we sort of
+house sitted for him for Amanda and Luke's last few days in Europe. Cards
+against humanity (The UK version) was played, 65 pounds of fireworks were
+purchased and set off in a near by field (45 seconds of non-stop explosions),
+cheese and wines were drank and good times were had.
+
+After our few days there, Matty drove Luke and Amanda to london in their own
+car that he is tasked with fixing up and selling next summer. by the time we got
+there, it was peak hour, so we stopped at a suburb in the outskirts and had a
+few drinks until the trains would have quitened down, then said our goodbyes to
+our good friends and wished them well on their American travels; before making
+the long drive back to nottingham.
+
+
+Matt kindly sorted us out some transport so we could go and check out the one
+real thing on my list of stuff to see in England, Stonehenge. I think the desire
+to see it actually comes from the movie European Vacation, which is kind of
+lame, but the real deal is pretty cool.
+
+On the drive there we were buffeted with ice cold winds, dark clouds and rain,
+but the wind actually worked in out favour, blowing us a clear patch in the sky
+while we were waiting in line to get in, that lasted for our whole visit. The
+weather while we were there was stunning, probably some of the best I saw during
+this visit.
+
+Learnt some interesting stuff from the far too verbose audioguides (when the
+number plaques are only 10M of grass lawn apart, yet the audio companion
+blabbers on for 20 minutes, you might be going into too much detail for the
+average visitor). 1/3rd of each pillar is actually underground, meaning that the
+already quite huge stones are actually 50% huger than they appear; they have
+*pegs and holes* helping keep the tops in place on the pillars; and the
+heaviest one is estimated to weight 45 Tons. Another amazing construction
+project that nobody truely knows how they accomplished it, although they have
+some theories that sound pretty reasonable.
+
+After Stonehenge we headed to Bristol to visit an old friend, Jen, and to check
+out some of the Banksy pieces around the city. I got an iphone app guide to his
+work around the city, which sadly a large proportion of have been vandalised and
+since painted over, but it was awesome to see the ones that were still there.
+
+We caught up with Jen over a few drinks, then headed to a fancy little
+microbrewery bar and had way to many more tasty beers, followed by an obligitory
+going-to-bed kebab before sleeping in the van. I slept in the back (whcih I
+found out was not exactly sealed from the outside air) and matt slept in the
+cabin. I was glad to have a reasonable sleeping bag that night.
+
+The next day Matt and I both felt rubbish, so we wandered around trying to find
+osmewhere that was open to get a decent breakfast, eventually finding a place
+called the bristolian that had a great english breakfast, helping us both
+feel much much better.
+
+We decided to go and visit bath that day, a picutrequse city full of beautiful
+architechure. We walked around the city a bit, saw a stealthy bridge (shops
+built on both sides of it hide the fact there's a bridge there at all), before
+making the very long drive back to nottingham.
+
+
+
+I spent a few of my last few days of this visit to England in London, revisiting
+sites I'd been to a decade earlier when I lived an hour away in Ipswich; lots of
+nice nolstagia.
+
+I went to buckingham palace and the huge gardens nearyby, walked over to big ben
+and westminster abbey, then walked along the Thames for a bit before it started
+raining.
+
+I headed over to Trafalga square and leicster square and bought some last minute
+ticekts to see "The book of mormon", a musical by the southpark guys, for that
+evening.
+
+I tracked down a very fancy london beard barber shop and got my beard shaped for
+way to much money, but you only live once. I got some good tips about shaping it
+myself (that I screwed up a few months later) and some tips on handlebar
+moustaches.
+
+I visited the london transport museum
+which was quite an interesting collection about all the eras and advancements in
+public transport in London. Funny to see signs from the start of last century
+for the same stuff that people need to be told today (don't block the doors,
+move down the isle, let people off first). It seems like common sense may never
+have actually been common. I'd actually hoped the museum would have a bit more
+of a focus on the underground specifically than it did, nearly completely
+missing information about the many abandoned underground stations, or 3d models
+of how the whole network and it's supporting escalators/lifts actually fit
+together.
+
+I went along to the Book of Mormon, which by that point was sold out completely,
+but my seat was actually pretty decent on the ground floor with a good view of
+the stage. one of the advantages of breaking social norms and doing things
+alone. The musical was a funny tale of two mormons who get sent to uganda to
+preach, one of who is a compulsive liar, the other a "star" mormon. The star
+loses faith so the liar steps up and makes up even crazier stuff than actual
+mormonizism to get the ugandans to stop doing bad things, such as killing one
+another or raping babies to cure their aids. I thought it poked a lot of fun of
+mormons, while not actually crossing any lines as far as southpark normally
+does.
+
+The next morning I went and saw london bridge, which is pretty dull but had a
+great view of the tower bridge, which I love to look at.
+
+I looped around and visted the tower of london, did the tour led by a beefeater
+which I enjoyed just as much as last time. They have great delivery of their
+stories and jokes making it both informative and enjoyable.
+
+I went thorugh and saw the crown jewels, this time looking out in particular for
+the big ones stolen from africa and india that I'd learned about in my travels,
+which they don't make very much note about that side of the story and that they
+wont return them.
+
+new interesting fact I learnt was that the tower was actually used as a menagery
+at one stage, filled with all kinds of exotic animals. a lot of the animal
+keeping back then left a lot to be desired, for example they had ostriches but
+didn't knowwhat they ate, so they tried feeding them iron nails, which of course
+killed them; and they used to have a polar bear on a leash that could swim in
+the thames.
+
+I went past the monument to the great fire of london, a very impressive pillar
+mostly hidden by the large buildings around it, then got the tube to camden
+where I was staying for the night. 
+
+Camden has some very cool culture and attracts some very odd people. One example
+was a tallented girl who was busking near the train station on an electric
+violin, while some douchebag sat metres in front of her listening to his
+ipod, moving only when someone tapped him on the shoulder and pointed out what
+an incredibly rude twat he was being.
+
+I wandered around the markets, seeing loads fo great street art, vintage and
+victorian clothes, and lots of other cool stuff to look at. I wish I had
+unlimited cash and no weight restrictions so I could buy a whole new wardrobe,
+try out a completely new style (or just _have_ a style really).
+
+I visited cyberdog, which is pretty much mandatory when going to camden, a store
+that pretty much doubles as a night club. The lights are dimmed, the UVs are on,
+there's a live hard trance DJ spinning records and everything. The place is full
+of rave clothes and cool trinkets, a tetris night light that comes appart
+completely and the blocks light up as you stack them in whatever order you
+please, pacman ghost ponchos. Quite an unique and wonderful shop.
+
+I spent the evening checking out my hostels open mic night, where the acts
+varied from extremely tallented, to please-stop-now, this is painful.
+
+The next morning mostly got wasted at the apple store. the camera in my phone
+had been showing some weird artifacts, which meant they were happy to replace it
+on the spot. unfortunately this mean I had a blank phone and needed to restore
+from icloud in order to have access to any of my important stuff like maps and
+my bus ticket back to nottingham, and the wifi in an apple store gets hammered
+pretty heavily by all the people using it so it took forever and then some.
+Still, shiny brand new phone for the 3rd time! I feels there's definitely been a
+drop in build quality from the iPhone 4 production to the iPhone 5. Gonna extend
+the apple care on this handset to make sure it still works for at least one more
+year, if not hopefully more.
+
+The afternoon was entirely spent at the science museum, full of fascinating
+exhibatios of aviation, mechanical computers, the materials things are made of,
+the human body and loads more. I spent 5 hours there before they kicked everyone
+out and closed, but I wish I had more time as there was so many more sections to
+visit.
+
+I met up with my old friend Andrew, who lived in Australia for a year a while
+back, and we went to a nice pub called "The cask" for some delicious ales and
+some very gourmet burgers, and a lot of catching up. We talked "shop" for a
+while and it was reassuring to still be able to feel like I'm not too far out of
+the loop. I guess tech change quickly, but the ranting points change much more
+slowly.
+
+ got the bus home, which didn't make it into nottingham until 2am, stumbled back
+to matty's place and passed out.
+
+The next morning matty made us an epic breakfast for lunch, then we set out to
+make one last visit to all the pubs in the area before I left. In at brewdog we
+had a nip of Tactical Nuclear Penguin each, one of their rare, strong (40%?),
+exotic and expensive drops, that thankfully at the bar at least they'll sell by
+the 30ml (instead of having to buy a 375ml bottle) it was supurb, but it's an
+impossible beer to follow as the flavour is just so intense.
+
+On my final day in England, we drove out to a nice country pub which a pretty
+sad selection of ales, so then drove back into town where we found a place doing
+an awesome sunday roast for lunch, conviently located near the build used as
+Wayne manor in Batman, which we also checked out. It's a very impressive mansion
+with a huge green grounds surrounding it.
+
+The next day I was off early to catch a flight to Berlin, Germany, to find out
+just how large the gaps in my knowledge about the cold war really were (huge!)
